@@ -1,3 +1,7 @@
+2004-10-23  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* dm/utmpentry.c: Update from NetBSD CVS.
+
 2004-09-15  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* fortune/fortune/fortune.6.in, fortune/strfile/strfile.8,
